@@ -1,5 +1,9 @@
 Release Note
 
+* 8/18/2014
+  * allowing retry for maxAttempt<=attemptNr
+  * fixed JG to register all output datasets 
+
 * 8/17/2014
   * fixed PP to check only master inputs
   * sending task view in notification
